<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_folder_black_24dp"
        android:key="insta_path"
        android:summary="@string/save_download"
        android:title="@string/instagram_file" />
    <Preference
        android:icon="@drawable/ic_folder_black_24dp"
        android:key="download_path"
        android:summary="@string/save_download"
        android:title="@string/youtube_file" />

    <!--<Preference
        android:icon="@drawable/ic_file_download_black_24dp"
        android:key="download_folder"
        android:title="@string/download_folder" />-->

    <Preference
        android:icon="@drawable/ic_share_black_24dp"
        android:key="key_share"
        android:title="@string/share" />

    <Preference
        android:icon="@drawable/ic_feedback_black_24dp"
        android:key="key_feedback"
        android:summary="@string/feedback_summary"
        android:title="@string/feedback" />


    <Preference
        android:icon="@drawable/ic_about_black_24dp"
        android:key="key_about"
        android:summary="@string/about_summary"
        android:title="@string/about" />


</PreferenceScreen>
