<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_insta"
        android:icon="@drawable/ic_insta_60"
        android:title="@string/dl_insta" />
    <item
        android:id="@+id/nav_yt"
        android:icon="@drawable/ic_youtube_64"
        android:title="@string/dl_youtube" />

    <item
        android:id="@+id/nav_inapp"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/upgrade_premium" />

<!--    <item-->
<!--        android:id="@+id/nav_download"-->
<!--        android:icon="@drawable/ic_file_download_black_24dp"-->
<!--        android:title="@string/download_folder" />-->

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

</menu>