<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_22"
    android:paddingBottom="@dimen/padding_22">

    <TextView
        android:id="@+id/tv_5dl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_add_shopping_cart_black_60dp"
        android:drawablePadding="@dimen/padding_10"
        android:gravity="center"
        android:padding="@dimen/padding_10"
        android:paddingTop="@dimen/padding_5"
        android:text="@string/download_5"
        android:textSize="@dimen/text_16" />


    <TextView
        android:id="@+id/tv_10dl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_add_shopping_cart_black_60dp"
        android:drawablePadding="@dimen/padding_10"
        android:gravity="center"
        android:padding="@dimen/padding_10"
        android:paddingTop="@dimen/padding_5"
        android:text="@string/download_10"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/tv_no_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_add_shopping_cart_black_60dp"
        android:drawablePadding="@dimen/padding_10"
        android:gravity="center"
        android:padding="@dimen/padding_10"
        android:paddingTop="@dimen/padding_5"
        android:text="@string/download_unlimit"
        android:textSize="@dimen/text_16" />

</LinearLayout>