<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="end">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.5"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:theme="@style/PrimaryButton"
                android:visibility="invisible"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="0.5"
                android:text="@string/copy"
                android:textColor="#ffffff"
                android:theme="@style/PrimaryButton"
                android:visibility="invisible"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnRepost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="0.5"
                android:text="@string/repost"
                android:textColor="#ffffff"
                android:theme="@style/PrimaryButton"
                android:visibility="invisible"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttonPanel"
            android:layout_below="@+id/toolbar"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/edtUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    tools:ignore="LabelFor,TextFields" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:text="@string/submit_url"
                        android:textColor="#ffffff"
                        android:theme="@style/PrimaryButton"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/btnPaste"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="0.5"
                        android:text="@string/paste"
                        android:textColor="#ffffff"
                        android:theme="@style/PrimaryButton"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:id="@+id/relative_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <ImageButton
                            android:id="@+id/imgPlay"
                            android:layout_width="100dp"
                            android:layout_height="75dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="80dp"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/instagram_downloader"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_play_96"
                            android:visibility="invisible" />


                        <ProgressBar
                            android:id="@+id/progress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:visibility="invisible" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="240dp">

                            <ImageView
                                android:id="@+id/imgView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/app_name" />

                            <TextView
                                android:id="@+id/page_number"
                                android:layout_width="40dp"
                                android:layout_height="23dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/bg_pagenumber"
                                android:gravity="center"
                                android:text="1/1"
                                android:textColor="@android:color/white"
                                android:visibility="gone">


                            </TextView>

                            <com.daimajia.slider.library.Indicators.PagerIndicator
                                android:id="@+id/custom_indicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="2dp" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/edtCaption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/slider"
                            android:layout_marginStart="4dp"
                            android:textColor="#000"
                            android:textSize="12sp" />

                        <com.daimajia.slider.library.SliderLayout
                            android:id="@+id/slider"
                            android:layout_width="match_parent"
                            android:layout_height="240dp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/adView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="visible">

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary">

        </androidx.appcompat.widget.Toolbar>
    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"

        app:headerLayout="@layout/nav_header"
        app:itemBackground="@drawable/navigation_state"
        app:menu="@menu/menu_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>